220620 gitHub repository 생성 클론코딩 수정 (main > height, header input > padding)

--- a/gitHub/css/index.css
+++ b/gitHub/css/index.css
@@ -35,6 +35,8 @@ header {
     border-radius: 5px;
     border: 1px solid var(--text-color);
 
+    padding: 0px 12px;
+
     background-color: var(--main-color);
 
     width: 279px;
@@ -74,7 +76,7 @@ main {
     margin-top: 40px;
 
     width: 768px;
-    height: 840px;
+    height: 870px;
 }
 
 .main_st {
@@ -105,7 +107,7 @@ hr {
     flex-direction: column;
     justify-content: space-between;
 
-    height: 150px;
+    height: 200px;
 }
 
 .create_name{
@@ -166,7 +168,17 @@ hr {
     background-color: var(--box-color);
 }
 
+.reco_in {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    height: 80px;
+}
+
 .recommend {
+    display: flex;
+    align-items: center;
     margin: 8px 0px;
     padding: 10px 0px;
 
